k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartorder
  labels:
    app.kubernetes.io/part-of: smartorder
